--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-validator": "^6.9.2",
     "knex": "^0.21.16",
     "moment": "^2.29.1",
+    "sass": "^1.49.7",
     "sqlite3": "^5.0.0",
     "ts-node": "^9.1.1"
   }
